added sql script to setup database schema

--- a/public/stylesheets/alt.css
+++ b/public/stylesheets/alt.css
@@ -67,7 +67,7 @@ body {
 .navbar-inverse {
 	border-radius: 0;
 	color: #fff;
-	background-color: #083D61;
+	background-color: #E83535;
 	background-image: none;
 }
 
